deployment/catering-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catering-service
  labels:
    app: catering-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catering-service
  template:
    metadata:
      labels:
        app: catering-service
    spec:
      containers:
      - image: eu.gcr.io/cateringunitmonitor/catering-service-build
        name: catering-service
        ports:
        - name: http
          containerPort: 8082
