deployment/mysql-deployment-catering.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-catering
  labels:
    app: mysql-catering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-catering
  template:
    metadata:
      labels:
        app: mysql-catering
    spec:
      containers:
      - name: mysql-catering
        image: mysql:5.6
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        # name must match the volume name below
        - name: mysql-persistent-storage
          # mount path within the container
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc-catering
