deployment/rating-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rating-service
  name: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
  template:
    metadata:
      labels:
        app: rating-service
    spec:
      containers:
      - env:
        - name: authServiceUrl
          value: http://user-service:8081
        - name: cateringServiceUrl
          value: http://catering-service:8082
        - name: userServiceUrl
          value: http://user-service:8081
        image: eu.gcr.io/cateringunitmonitorproject/rating-service-build
        name: rating-service
        ports:
        - containerPort: 8085
