deployment/user-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: eu.gcr.io/cateringunitmonitor/user-service-build
        name: user-service
        ports:
        - name: http
          containerPort: 8081
