deployment/catering-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catering-service
spec:
  ports:
  - name: "8082"
    port: 8082
    targetPort: 8082
  selector:
    app: catering-service-app
  type: NodePort
