deployment/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gateway-service
  type: LoadBalancer
