deployment/mysql-service-catering.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-catering
  labels:
    app: mysql-catering
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-catering
