deployment/mysql-service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-user
  labels:
    app: mysql-user
spec:
  ports:
  - port: 3310
  selector:
    app: mysql-user
