deployment/statistic-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: statistic-service
  name: statistic-service
spec:
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
  selector:
    app: statistic-service
  type: LoadBalancer
