deployment/ui-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catering-ui
  labels:
    app: catering-ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: catering-ui
  type: LoadBalancer
