deployment/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    app: user-service-app
  type: NodePort
